src/objects/Opportunity_Department__c.object
<CustomObject>
    <description>Related list used by Opportunities to support multiple department &amp; percent.</description>
    <fields>
        <fullName>AECOM_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AECOM Department</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Primary_Department__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Primary_Department__c</referenceTo>
        <relationshipLabel>Opportunity Departments</relationshipLabel>
        <relationshipName>Opportunity_Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <formula>AECOM_Department__r.Business_Line_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <description>Department name in text for use in alerts.</description>
        <formula>AECOM_Department__r.Name</formula>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Org_String__c</fullName>
        <description>Used by ANZ</description>
        <formula>AECOM_Department__r.Org_String__c</formula>
        <label>Dept Org String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Market__c</fullName>
        <description>Displays the &quot;Super Business Line&quot; (aka End Market) for reporting purposes</description>
        <formula>TEXT (AECOM_Department__r.End_Market__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the &quot;Super Business Line&quot; (aka End Market) for reporting purposes. Auto populated from AECOM Departments table.</inlineHelpText>
        <label>End Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <formula>AECOM_Department__r.Geography_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>TEXT (AECOM_Department__r.Group__c)</formula>
        <inlineHelpText>Group associated with the Geography of this department</inlineHelpText>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDReport__c</fullName>
        <description>Generates 18-digit SF ID needed for dataloader use.</description>
        <formula>CASESAFEID(Id)</formula>
        <label>IDReport</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <formula>Opportunity__r.Import_Source__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Import Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_District__c</fullName>
        <formula>AECOM_Department__r.Lead_District__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead District</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Region__c</fullName>
        <formula>AECOM_Department__r.Lead_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OD_Forecast_Revenue_Month_10__c</fullName>
        <description>Displays forecast of net revenue for the 10th month after today&apos;s month</description>
        <formula>IF ( 

(MONTH (TODAY())&gt;2 
&amp;&amp; 
(YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) 
|| (MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) - 2 &amp;&amp; YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) +1 
)) 
&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) + 1 
|| ( (YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) + 1 &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) - 2) ))) 
) 

|| 
( 
MONTH (TODAY()) &lt;=2 
&amp;&amp; YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) 
&amp;&amp; MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) +10 
&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) 
|| ((YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) +10)))) 
), 
( TO_Project_Forecast_Share__c / 
( 
((YEAR(Opportunity__r.Work_end_date_del__c ) - YEAR(Opportunity__r.Estimated_work_start_date__c ) - 1) *12) + (12 - MONTH(Opportunity__r.Estimated_work_start_date__c) +1) + MONTH(Opportunity__r.Work_end_date_del__c)) 
) 

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays forecast of net revenue for the 10th month after today&apos;s month</inlineHelpText>
        <label>OD Forecast Revenue Month 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Forecast_Revenue_Month_11__c</fullName>
        <description>Displays forecast of net revenue for the 11th month after today&apos;s month</description>
        <formula>IF ( 

(MONTH (TODAY())&gt;1 
&amp;&amp; 
(YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) 
|| (MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) - 1 &amp;&amp; YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) +1 
)) 
&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) + 1 
|| ( (YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) + 1 &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) - 1) ))) 
) 

|| 
( 
MONTH (TODAY()) &lt;=1 
&amp;&amp; YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) 
&amp;&amp; MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) +11 
&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) 
|| ((YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) +11)))) 
), 
( TO_Project_Forecast_Share__c / 
( 
((YEAR(Opportunity__r.Work_end_date_del__c ) - YEAR(Opportunity__r.Estimated_work_start_date__c ) - 1) *12) + (12 - MONTH(Opportunity__r.Estimated_work_start_date__c) +1) + MONTH(Opportunity__r.Work_end_date_del__c)) 
) 

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays forecast of net revenue for the 11th month after today&apos;s month</inlineHelpText>
        <label>OD Forecast Revenue Month 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Forecast_Revenue_Month_12__c</fullName>
        <description>Displays forecast of net revenue for the 12th month after today&apos;s month</description>
        <formula>IF ( 
( YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) +1 &amp;&amp; MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) 
|| YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) ) 

&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) +1 
|| ((YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) +1 &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) )))) 
, 
( TO_Project_Forecast_Share__c / 
( 
((YEAR(Opportunity__r.Work_end_date_del__c ) - YEAR(Opportunity__r.Estimated_work_start_date__c ) - 1) *12) + (12 - MONTH(Opportunity__r.Estimated_work_start_date__c) +1) + MONTH(Opportunity__r.Work_end_date_del__c)) 
) 

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays forecast of net revenue for the 12th month after today&apos;s month</inlineHelpText>
        <label>OD Forecast Revenue Month 12</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Forecast_Revenue_next_month__c</fullName>
        <formula>IF 
( 
(MONTH (TODAY()) = 12 
&amp;&amp; 
(YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) 
|| (MONTH (Opportunity__r.Estimated_work_start_date__c) = MONTH (TODAY()) +1 &amp;&amp; YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) +1 
) 
&amp;&amp; 
YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) ) 
) 
|| 
( 
MONTH (TODAY()) &lt; 12 
&amp;&amp; YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) 
&amp;&amp; MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) +1 
&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) 
|| ((YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) +1)))) 
) 
, 
( TO_Project_Forecast_Share__c / 
( 
((YEAR(Opportunity__r.Work_end_date_del__c ) - YEAR(Opportunity__r.Estimated_work_start_date__c ) - 1) *12) + (12 - MONTH(Opportunity__r.Estimated_work_start_date__c) +1) + MONTH(Opportunity__r.Work_end_date_del__c)) 
) 

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays Next month&apos;s revenue for TO or Project</inlineHelpText>
        <label>OD Forecast Revenue next month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OD_Forecast_Revenue_this_month__c</fullName>
        <description>Displays forecast of net revenue for today&apos;s month</description>
        <formula>IF ( 
( YEAR (Opportunity__r.Estimated_work_start_date__c) = YEAR (TODAY()) &amp;&amp; MONTH (Opportunity__r.Estimated_work_start_date__c) &lt;= MONTH (TODAY()) 
) 

&amp;&amp; 
((YEAR (Opportunity__r.Work_end_date_del__c ) &gt; YEAR (TODAY()) 
|| ((YEAR (Opportunity__r.Work_end_date_del__c ) = YEAR (TODAY()) &amp;&amp; MONTH (Opportunity__r.Work_end_date_del__c ) &gt;= MONTH (TODAY()) )))) 
, 
( TO_Project_Forecast_Share__c  / 
( 
((YEAR(Opportunity__r.Work_end_date_del__c ) - YEAR(Opportunity__r.Estimated_work_start_date__c ) - 1) *12) + (12 - MONTH(Opportunity__r.Estimated_work_start_date__c) +1) + MONTH(Opportunity__r.Work_end_date_del__c)) 
) 

,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OD Forecast Revenue this month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Departments</relationshipLabel>
        <relationshipName>Opportunity_Departments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ordinal__c</fullName>
        <label>Ordinal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Formerly called Market Segment/ Practice Area</description>
        <label>AECOM Work</label>
        <referenceTo>Practice_Area__c</referenceTo>
        <relationshipLabel>Opportunity Departments</relationshipLabel>
        <relationshipName>Opportunity_Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Net_Revenue__c</fullName>
        <formula>split__c *  Opportunity__r.Net_Revenue_Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Split_Program__c</fullName>
        <formula>Opportunity__r.Ceiling_Amount_Total__c*split__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Split_TO_Proj__c</fullName>
        <formula>Opportunity__r.Amount *split__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO/Project Gross Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Practice_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Practice Area</label>
        <referenceTo>Sub_Practice_Area__c</referenceTo>
        <relationshipLabel>Opportunity Departments</relationshipLabel>
        <relationshipName>Opportunity_Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TO_Project_Forecast_Share__c</fullName>
        <description>For reporting only</description>
        <formula>TO_Project_Net_Revenue__c *  Opportunity__r.Probability *  Opportunity__r.Go_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>TO/Project Net Revenue X Probability</inlineHelpText>
        <label>TO/Project Forecast Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TO_Project_Net_Revenue__c</fullName>
        <formula>split__c  *  Opportunity__r.Net_Revenue_TO_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TO/Project Net Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>URS_Region__c</fullName>
        <formula>text(AECOM_Department__r.URS_Region__c)</formula>
        <inlineHelpText>Based on AECOM department</inlineHelpText>
        <label>URS Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>split__c</fullName>
        <label>% Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Opportunity Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>split__c</columns>
        <columns>AECOM_Department__c</columns>
        <columns>Practice_Area__c</columns>
        <columns>Business_Line__c</columns>
        <columns>Department_Name__c</columns>
        <columns>End_Market__c</columns>
        <columns>Geography__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Nancy_Look</fullName>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>split__c</columns>
        <columns>NAME</columns>
        <columns>AECOM_Department__c</columns>
        <columns>Practice_Area__c</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UPDATEDBY_USER</field>
            <operation>contains</operation>
            <value>NA System</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>10/1/2013 12:00 AM</value>
        </filters>
        <label>Nancy Look</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Departments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BdgEng_Sub_Practice_Area_required</fullName>
        <active>false</active>
        <description>Requires that Building Engineering opps have an entry in the sub practice area field.
Turned off 10/2014 when all D+P Sub Practices were removed.</description>
        <errorConditionFormula>AND(NOT(CONTAINS( $User.CommunityNickname, &apos;SystemNA&apos;)) ,
NOT(CONTAINS( $Profile.Name, &apos;API Access&apos;)), 
 CONTAINS(  Business_Line__c  , &apos;Building Engineering&apos;)
, 
ISNULL( LastModifiedDate) ,

OR(
BEGINS(TEXT(  Opportunity__r.StageName  ),&quot;1&quot;),
BEGINS(TEXT( Opportunity__r.StageName),&quot;2&quot;),
BEGINS(TEXT( Opportunity__r.StageName),&quot;3&quot;),
BEGINS(TEXT( Opportunity__r.StageName),&quot;5&quot;)
)
,
ISBLANK(   Sub_Practice_Area__c 
 ))</errorConditionFormula>
        <errorDisplayField>split__c</errorDisplayField>
        <errorMessage>Please select a Sub Practice Area for the Building Engineering Department</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_Primary_Departments_Not_Allowed</fullName>
        <active>false</active>
        <description>When saving/adding/updating Departments associated to the opportunity,  check only one Department is marked as Primary</description>
        <errorConditionFormula>Opportunity__r.Primary_Department_Count__c&gt; 1</errorConditionFormula>
        <errorMessage>You can only mark one Department as Primary.</errorMessage>
    </validationRules>
</CustomObject>